Changed the push pin design.

--- a/plot.Rmd
+++ b/plot.Rmd
@@ -20,9 +20,10 @@ data <- data %>%
 
 **Tilanne:** `r (data %>% filter(Visit == "Joo") %>% nrow / nrow(data)) %>% scales::percent(., suffix = " %")` puistoista käyty (`r nrow(data %>% filter(Visit == "Joo"))` / `r nrow(data)`)! 
 
+
 ### Kartta
 
-```{r include=FALSE}
+```{r}
 # GPX files
 # https://medium.com/@mark.reuter/parsing-gps-gpx-files-with-r-21ea0a694da8
 routes <- list.files("data/gpx", recursive = T, full.names = T)
@@ -46,19 +47,33 @@ gpxdf <- bind_rows(gpx) %>%
 ```{r}
 # Visited icons
 visited <- data %>% filter(Visit == "Joo")
-visited_icons <- icons(
-  iconUrl = visited$Logo_url,
-  iconWidth = 40, iconHeight = 30,
-  iconAnchorX = 0, iconAnchorY = 0
-)
+# visited_icons <- icons(
+#   iconUrl = visited$Logo_url,
+#   iconWidth = 40, iconHeight = 30,
+#   iconAnchorX = 0, iconAnchorY = 0
+# )
 
 # Not yet
 notyet <- data %>% filter(Visit != "Joo")
-notyet_icons <- icons(
-  iconUrl = "help-circle.svg",
-  iconWidth = 20, iconHeight = 20,
+# notyet_icons <- icons(
+#   iconUrl = "help-circle.svg",
+#   iconWidth = 20, iconHeight = 20,
+#   iconAnchorX = 0, iconAnchorY = 0
+# )
+
+
+# Simple pins
+visited_icons <- icons(
+  iconUrl = "pin.png",
+  iconWidth = 30, iconHeight = 30,
   iconAnchorX = 0, iconAnchorY = 0
 )
+notyet_icons <- icons(
+  iconUrl = "pin2.png",
+  iconWidth = 30, iconHeight = 30,
+  iconAnchorX = 0, iconAnchorY = 0
+)
+
 
 # Plot
 basemap <- data %>%
@@ -74,6 +89,18 @@ basemap <- data %>%
     label = notyet$Park_short,
     icon = notyet_icons
   )
+    
+    
+  # addMarkers(
+  #   data = visited, ~Long, ~Lat,
+  #   label = paste0(visited$Park_short, "\n", visited$Dates),
+  #   icon = visited_icons
+  # ) %>%
+  # addMarkers(
+  #   data = notyet, ~Long, ~Lat,
+  #   label = notyet$Park_short,
+  #   icon = notyet_icons
+  # )
 
 # Add gpx routes
 for (i in 1:length(routes)) {
@@ -82,7 +109,7 @@ for (i in 1:length(routes)) {
       data = gpxdf %>% filter(route == i),
       lat = ~lat,
       lng = ~lon,
-      color = "#CD2626",
+      color = "#008B00",
       opacity = 0.8,
       weight = 3
     )
