--- a/index.Rmd
+++ b/index.Rmd
@@ -209,9 +209,10 @@ data %>%
 
   ggimage::geom_image(aes(image = Logo_url), size = 0.12, position = ggstance::position_dodgev(height = 1)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  scale_y_continuous(limits = c(1, 12), breaks = c(1:12), labels = c("Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec")) +
+  scale_y_continuous(breaks = c(1:12), expand = expansion(mult = c(.1, .1))) +
   scale_x_continuous(breaks = c(2010:2100)) +
-  scale_colour_gradientn(name = "Pinta-ala", colors = rev(c("#67001f", "#b2182b", "#d6604d", "#f4a582"))) +
+  coord_cartesian(ylim = c(1, 12)) +
+  # scale_colour_gradientn(name = "Pinta-ala", colors = rev(c("#67001f", "#b2182b", "#d6604d", "#f4a582"))) +
   ylab("Kuukausi") + xlab("Vuosi")
 
 
